--- a/_posts/2023-02-19-OPNsense.md
+++ b/_posts/2023-02-19-OPNsense.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: OPNSense, my perimeter firewall
+title: OPNsense, My Perimeter Firewall
 ---
 
 In this post I will outline my OPNsense configuration.
@@ -9,7 +9,7 @@ In this post I will outline my OPNsense configuration.
 
 At home, I use OPNsense as my perimeter firewall. It's located at the boundary of my internet service provider's (ISP) network and my internal networks, which are listed in the table below:
 
-| Name       | Description                                   | Why does it have a separate network?                                       | VLAN | Subnet           |
+| Name       | Description                                   | Why does it have a separate network?       | VLAN | Subnet           |
 | ---------- | --------------------------------------------- | ------------------------------------------ | ---- | ---------------- |
 | TRANSIT    | OPNsense and core switch                      | Simplify OPNsense/network configuration    | 96   | 192.168.96.0/24  |
 | CAPWAP     | Access points and Cisco WLC                   | Traffic segregation                        | 98   | 192.168.98.0/24  |
@@ -17,7 +17,7 @@ At home, I use OPNsense as my perimeter firewall. It's located at the boundary o
 | PRODUCTION | Production servers                            |                                            | 100  | 192.168.100.0/24 |
 | SAND-PIT   | General user LAN                              | User local area network                    | 101  | 192.168.101.0/24 |
 | THE-KIDS   | WIFI for the kids                             | Content blocking                           | 102  | 192.168.102.0/24 |
-| NAS-NFS    | Network attached storage                      | Limit access to NAS                        | 103  | 192.168.103.0/24 |
+| NFS        | Network file system                           | Limit access to NFS                        | 103  | 192.168.103.0/24 |
 | CAST-NET   | Printers, media players, and voice assistants | Device containment                         | 104  | 192.168.104.0/24 |
 | SPY-WARE   | Security cameras                              | Limit access to cameras                    | 105  | 192.168.105.0/24 |
 | HOME-LAB   | Stuff                                         | Traffic segregation and device containment | 106  | 192.168.106.0/24 |
@@ -71,7 +71,7 @@ The following will setup an OPNsense service to provide IPv4 addresses to DHCP c
     `dhcpd.conf` example
 - Copy the configuration file to OPNsense with ssh
     ```console
-    scp /home/josh/Documents/dhcpd.conf josh@192.168.96.96:/usr/local/etc/dhcpd.opnsense.d/
+    $ scp /home/josh/Documents/dhcpd.conf josh@192.168.96.96:/usr/local/etc/dhcpd.opnsense.d/
     ```
 - In **Services: DHCPv4: [LAN]** enable DHCP server on the LAN interface
 - Check the log **Services: DHCPv4: Log File**
@@ -82,7 +82,7 @@ more to come
 
 ### Network Time Protocol Service
 
-The following will setup an OPNsense to respond to NTP requests from all clients on the internal networks. Clients will no longer be able to make NTP requests directly to the internet. 
+The following will setup an OPNsense to respond to NTP requests from all clients on the internal networks. Clients will no longer be able to make NTP requests directly to the internet.
 
 - In **Services: Network Time: General** change interface to LAN and uncheck all check-boxes under Access restrictions
 - In **Firewall: NAT: Port Forward** create a new rule to capture all NTP traffic.
