--- a/_posts/2023-02-19-OPNsense.md
+++ b/_posts/2023-02-19-OPNsense.md
@@ -26,9 +26,25 @@ At home, I use OPNsense as my perimeter firewall. It's located at the boundary o
 
 ## OPNsense configuration
 
+OPNsense is setup as a router on a stick. 
+
 ### Interfaces
 
-OPNsense is configured with two interfaces; LAN which connects to my internal networks, and WAN which connects to my ISP's network.
+The OPNsense VM is assigned three virtual network adaptors in ESXi. One of the adaptors is the "on a stick" interface which split into an interface for vlan.
+| Interface        | Description | IPv4 Address     | IPv6 Address |
+| ---------------- | ----------- | ---------------- | ------------ |
+| [LAN] em0        | OOB-MGMT    | DHCP4            |
+| [OPT1] vmx0.99   | INB-MGMT    | 192.168.99.1/24  |
+| [OPT2] vmx0.100  |             | 192.168.100.1/24 |
+| [OPT3] vmx0.101  | SAND-PIT    | 192.168.101.1/24 |
+| [OPT4] vmx0.102  |             | 192.168.102.1/24 |
+| [OPT5] vmx0.103  |             | 192.168.103.1/24 |
+| [OPT6] vmx0.104  |             | 192.168.104.1/24 |
+| [OPT7] vmx0.105  |             | 192.168.105.1/24 |
+| [OPT8] vmx0.106  |             | 192.168.106.1/24 |
+| [OPT9] vmx0.107  | LOL-CATS    | 192.168.107.1/24 |
+| [OPT10] vmx0.108 |             | 192.168.108.1/24 |
+| [WAN] vmx1       |             | DHCP4            | DHCP6        |
 
 #### LAN
 
